--- a/main.css
+++ b/main.css
@@ -9,3 +9,31 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
+
+#red{
+  border-top: #f00;
+}
+
+#orange{
+  border-top: #ffa500;
+}
+
+#yellow{
+  border-top: #ff0;
+}
+
+#green{
+  border-top: #00bc3f;
+}
+
+#blue{
+  border-top: #06f;
+}
+
+#indigo{
+  border-top: #8a2be2;
+}
+
+#violet{
+  border-top: #d300c9;
+}
